# wrap

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  libwrap.3  main.c  sample-in.txt  sample.c  test.c  wrap.1  wrap.c  wrap.h
.github/workflows/: build.yaml
